--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.19.2",
 		"firebase": "^8.2.1",
+		"firebase-admin": "^9.4.2",
 		"material-table": "^1.59.0",
 		"react": "^16.13.1",
 		"react-avatar": "^3.9.6",
